2001-05-24  Mikhael Goikhman  <migo@homemail.com>

	* NEWS:
	* fvwm/fvwm2.1:
	* fvwm/read.c (expand):
	(execute_function):
	Module configuration commands are now processed like any other
	commands (so "+ I $0" when $0 is "*FvwmPager..." is now recognized
	as a module command, as well as "+ I *$0" when $0 is "FvwmPager...").
	This also means that parameters are expanded now in module lines,
	except for single alphabetical-letter parameters, which are not
	expanded for backward compatibility.

2001-05-22  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/stack.c (is_on_top_of_layer):
	never consider a window to be "on top" with windows X servers

	* fvwm/virtual.c (checkPanFrames):
	cleaned up code duplication and logic

	* fvwm/events.c (HandleConfigureRequest):
	fixed random client window size when ConfigureNotify caused a restack
	but no size change; fixes "import -frame" problem

2001-05-20  Mikhael Goikhman  <migo@homemail.com>

	* INSTALL.fvwm: remove a note about the old Cygwin (hopefully fixed)
	* configure.in: say that rplay is needed for FvwmEvent only
	* fvwm/fvwm2.1: several typos and corrections
	* fvwm/gnome.c: use True/False instead of On/Off in WindowShade
	* README: s/2.3.0/2.4.0/

2001-05-19  olicha  <olivier.chapuis@free.fr>

	* fvwm/gnome.c (GNOME_HandlePropRequest):
	Fixed GNOME Shade state

2001-05-16  Mikhael Goikhman  <migo@homemail.com>

	* fvwm/fvwm2.1:
	more explanations about module aliases

2001-05-14  Dan Espen  <dane@mk.telcordia.com>

	* libs/Graphics.c (CreateGradientPixmap): Avoid divide by zero errors
	in S,C,Y Gradients with the help of a very smart horse.

2001-05-14  olicha  <olivier.chapuis@free.fr>

	* acinclude.m4:
	Fixed (true) IMLIB test (never used) and say that we test GDK Imlib
	in GDK Imlib test

2001-05-09  Hippo

	* fvwm/focus.c (warp_to_fvwm_window):
	WarpToWindow handles negative numbers

2001-05-11  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/focus.c (DoSetFocus):
	another attempt to fix "Globally Active" input model
