@@ -2311,20 +2311,20 @@ A: Under this heading we've had questions about FvwmForm being all
      # FvwmButtons icon launcher:
      DestroyFunc Launcher
      AddToFunc Launcher
-     + I DestroyModuleConfig $0Launch.*
-     + I *$0Launch.Geometry 64x68
-     + I *$0Launch.Columns 1
-     + I *$0Launch.Rows    4
-     + I *$0Launch.Frame  0
-     + I *$0Launch.(1x3+0+0, Icon $1, Action (Mouse 1) `Exec $2`)
-     + I *$0Launch.Pixmap none
-     + I *$0Launch.(1x1+0+3, Font 9x15, Fore White, Back DarkBlue, \
+     + I DestroyModuleConfig $0Launch: *
+     + I *$0Launch: Geometry 64x68
+     + I *$0Launch: Columns 1
+     + I *$0Launch: Rows    4
+     + I *$0Launch: Frame   0
+     + I *$0Launch: (1x3+0+0, Icon $1, Action (Mouse 1) `Exec $2`)
+     + I *$0Launch: Pixmap none
+     + I *$0Launch: (1x1+0+3, Font 9x15, Fore White, Back DarkBlue, \
                     Title $0, Action (Mouse 1) `Exec $2`)
-     + I Style $0Launch. HandleWidth 0, NoTitle
-     + I Module FvwmButtons $3 $0Launch.
+     + I Style $0Launch HandleWidth 0, NoTitle
+     + I Module FvwmButtons $3 $0Launch
      # Examples:
      Launcher RXVT xterm.xpm "rxvt -bg black" "-g +0+0"
      Launcher XV   xv.xpm    "xv"   "-g +0+100"
 
-Also, GNOME and KDE have  stand-alone applications gmc and kfm,  which
-enable this functionality. These applications may be run under FVWM.
+   Also, GNOME and KDE have desktop icon applications gmc and kfm, which
+   enable this functionality.  These applications may be run under FVWM.
