@@ -135,12 +135,16 @@ void run_command_stream( FILE* f, XEvent *eventp, FvwmWindow *tmp_win,
     tline=line;
     while(isspace((unsigned char)*tline))
       tline++;
+    l = strlen(tline);
+    if (l > 0 && tline[l - 1] == '\n')
+      tline[l - 1] = '\0';
+
     if (debugging)
       fvwm_msg(DBG,"ReadSubFunc","Module switch %d, about to exec: '%.*s'",
 	       Module,strlen(tline)-1,tline);
 
     old_execute_function(tline, tmp_win, eventp, context, Module, 0, NULL);
-    tline = fgets(line,(sizeof line)-1,f);
+    tline = fgets(line, (sizeof line) - 1, f);
   }
 }
 
