@@ -1,3 +1,7 @@
+2001-05-24  Mikhael Goikhman  <migo@homemail.com>
+
+	* FAQ (7.13): minor syntax change
+
 2001-05-24  Dan Espen  <dane@mk.telcordia.com>
 
 	* FAQ: Add gmc and kfm as possibilities for question 7.13.
